--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,7 +19,7 @@ h1 {
   opacity: 1;
 }
 
-h2, p {
+h2 {
   text-align: center;
 }
 
@@ -36,7 +36,7 @@ input {
 }
 
 .usd {
-  margin-left: 580px;
+  margin-left: 570px;
 }
 
 .radio {
@@ -44,6 +44,7 @@ input {
   vertical-align: top;
   margin-left: 100px;
   margin-top: 30px;
+  background-color: rgba(255, 0, 0, 0.267);
 }
 
 h3 {
@@ -53,5 +54,5 @@ h3 {
 .btn {
   background-color: khaki;
   margin-top: 20px;
-  margin-left: 580px;
+  margin-left: 570px;
 }
