--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,7 +66,7 @@ h3 {
   margin-right: 800px;
   margin-top: 75px;
   margin-bottom: 50px;
-  padding-bottom: 100px;
+  padding-bottom: 75px;
   padding-top: 50px;
   padding-left: 30px;
   padding-right: 30px;
@@ -75,5 +75,11 @@ h3 {
 
 h4 {
   color: gold;
-  text-shadow: 3px 2px black;
+  text-shadow: 2px 2px black;
+}
+
+h5 {
+  font-size: 60px;
+  text-align: center;
+  
 }
